manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: crud-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: crud-app
    template:
       metadata:
          labels:
             app: crud-app
       spec:
          containers:
          - name: crud-app-container
            image: aircrisp/otus-app:homework2
            ports:
              - name: web
                containerPort: 8080
            readinessProbe:
              httpGet:
                port: 8080
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
