manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-service
spec:
  selector:
    app: crud-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
